<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/register_phone"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone_hint"
            android:inputType="phone"
            android:paddingLeft="90dp"
            android:textColorHint="@color/line_color"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/register_password"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_register_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="90dp"
            android:textColorHint="@color/line_color"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/sure_register_password"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_sure_register_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/sure_register_password_hint"
            android:paddingLeft="90dp"
            android:textColorHint="@color/line_color"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/register_captcha"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_register_captcha_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_captcha_hint"
            android:paddingLeft="90dp"
            android:inputType="number"
            android:textColorHint="@color/line_color"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_get_captcha_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/register_code_background"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="3dp"
            android:text="@string/get_register_captcha_code"
            android:textColor="@color/blue"
            android:textSize="12sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/register_request_code"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_register_request_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_request_code_hint"
            android:inputType="number"
            android:paddingLeft="90dp"
            android:textColorHint="@color/line_color"
            android:textSize="16sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_shape"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</LinearLayout>
