<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_bottom_pour_money"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_hundred_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_shape"
            android:gravity="center"
            android:text="@string/hundred_money"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_two_hundred_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_shape"
            android:gravity="center"
            android:text="@string/two_hundred_money"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_three_hundred_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_shape"
            android:gravity="center"
            android:text="@string/three_hundred_money"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_five_hundred_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_shape"
            android:gravity="center"
            android:text="@string/five_hundred_money"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_pour_money"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_bottom_pour_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="300元"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_sure_bottom_pour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tff7800"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/sure_bottom_pour"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>