<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/tff7800"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_head"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/civ_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_login_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="(当前是用账号登录)"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_business_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_right"
        android:gravity="center|left"
        android:padding="15dp"
        android:text="@string/business_record" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_my_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_right"
        android:gravity="center|left"
        android:padding="15dp"
        android:text="@string/my_news" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_contact_custom_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_right"
        android:gravity="center|left"
        android:padding="15dp"
        android:text="@string/contact_custom_service" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_my_extend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_right"
        android:gravity="center|left"
        android:padding="15dp"
        android:text="@string/my_extend" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_back_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_right"
        android:gravity="center|left"
        android:padding="15dp"
        android:text="@string/back_login" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />
</LinearLayout>