<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_lead_up_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lead_up_money"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_lead_up_money"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColorHint="@color/line_color"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:hint="@string/send_lead_up_money"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_lead_up_money_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_lead_up_money"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/orange_shape"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/lead_up"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>