<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/tv_num_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="第1198期 庄(玩家名称):未抢"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_up_time"
                android:textColor="@color/black"
                android:paddingRight="5dp"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_lead_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="0:5:12"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_bottom_pour_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_down"
            android:gravity="center"
            android:text="@string/bottom_pour_record"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_msg"
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/et_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/white_shape" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/tv_bottom_pour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@color/tff7800"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/bottom_pour"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_lead_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/tff7800"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/lead_up"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
